--- a/unzipper/localization/es/messages.json
+++ b/unzipper/localization/es/messages.json
@@ -1,8 +1,8 @@
 {
     "this_lang": "es",
 
-    "start": "Hola **{}**, Soy **Nexa Unzipper Bot** 😇!\n\n`Un Bot de fuente abierta que puede extraer archivos como: zip, rar, tar etc.`\n\n**Hecho con ❤️ por @NexaBotsUpdates**",
-    "about": "**Acerca de Nexa Unzipper Bot,**\n\n✘ **Versión:** `{}`\n✘ **Lenguaje:** [Python](https://www.python.org/)\n✘ **Framework:** [Pyrogram](https://docs.pyrogram.org/)\n✘ **Desarrollador:** [Itz-fork](https://github.com/Itz-fork)\n✘ **Fuente de código:** [Itz-fork/Unzipper-Bot](https://github.com/Itz-fork/Unzipper-Bot)\n\n\n**Hecho con ❤️ por @NexaBotsUpdates**",
+    "start": "Hola **{}**, Soy **Raphtalia** ☺️!\n\n`puedo extraer archivos como: zip, rar, tar etc.`\n\n**Hecho con ❤️ por @luteg_glh**",
+    "about": "**Acerca de Raphtalia,**\n\n✘ **Versión:** `{}`\n✘ **Lenguaje:** [Python](https://www.python.org/)\n✘ **Framework:** [Pyrogram](https://docs.pyrogram.org/)\n✘ **Propietaria:** [Dare?](https://t.me/luteg_glh)\n✘ **Grupo:** [Mirror-gan](https://t.me/mirror_gan)**",
     
     "processing": "`Procesando ⚙️...`",
     "refreshing": "`Refrescando ⏳...`",
@@ -19,17 +19,17 @@
     
     "ok_backup": "**¡Copia de seguridad exitosa ✅!** \n\n**Enlace 🔗:** {}",
     "ok_download": "**¡Descarga exitosa ✅!**\n\n**📂 Nombre del archivo:** `{}`\n**⬇️ Descargado en:** `{}`",
-    "ok_extract": "**¡Extraído exitosamente ✅!**\n\n**🕐 Extraído en:** `{}`\n\n\n**Hecho con ❤️ por @NexaBotsUpdates**",
+    "ok_extract": "**¡Extraído exitosamente ✅!**\n\n**🕐 Extraído en:** `{}`",
     "ok_upload": "**¡Subido exitosamente✅!**\n\n**📂 Nombre del archivo:** `{}`\n**⬆️ Subido en:** `{}`",
-    "ok_upload_basic": "**¡Subido exitosamente ✅!** \n\n *Únete a @NexaBotsUpdates ❤️**",
+    "ok_upload_basic": "**¡Subido exitosamente ✅!**",
     "ok_saving_thumb": "**¡Miniatura guardada exitosamente ✅!**",
     "ok_deleting_thumb": "**Miniatura borrada exitosamente ✅!**",
     "ok_ban": "**Usuario baneado exitosamente ✅!** \n\n**ID del usuario:** `{}`",
     "ok_unban": "**Usuario desbaneado exitosamente ✅!** \n\n**ID del usuario:** `{}`",
     "ok_wont_delete": "**Oh genial, No borraré tus archivos 😂!**",
     
-    "failed_main": "**Ocurrió un error 😕!**\n\n**ERROR:** {}\n\n\n**Por favor repórtalo a @Nexa_bots**",
-    "failed_extract": "**Extracción fallida 😕!**\n\n**Que hacer?**\n\n - `Por favor, asegúrate de que el archivo no esté corrupto`\n - `Por favor, asegúrate de que seleccionaste el modo correcto`\n - `Pueda que tu archivo no sea soportado😔`\n\n**Por favor repórtalo a @Nexa_bots**",
+    "failed_main": "**Ocurrió un error 😕!**\n\n**ERROR:** {}",
+    "failed_extract": "**Extracción fallida 😕!**\n\n**Que hacer?**\n\n - `Por favor, asegúrate de que el archivo no esté corrupto`\n - `Por favor, asegúrate de que seleccionaste el modo correcto`\n - `Pueda que tu archivo no sea soportado😔`",
     
     "no_thumb": "¡Miniatura no encontrada. Establece una con el comando `/set_thumb`!",
     "no_userid": "`¡Pon una ID de usuario!`",
