--- a/unzipper/localization/es/messages.json
+++ b/unzipper/localization/es/messages.json
@@ -15,7 +15,7 @@
     "help_upmode": "**¿Cómo cambiar el modo de envío? 🤔**\n\n**1.** `Envía el comando` **/mode** `.`\n**2.** `Selecciona la opción apropiada.`",
     "help_backup": "**¿Cómo hacer una copia de seguridad a tus archivos? 🤔**\n\nEl servidor del Bot resetea cada 24 horas (heroku). Lo que significa que tus archivos serán completamente eliminados del servidor.\nAntes de que eso pase, puedes haber una copia de seguridad en gofile.io\n\n**1.** `Envía el comando` **/backup** `al bot.`\n**2.** `Selecciona la opción apropiada.`",
     "help_thumb": "**¿Cómo cambiar la miniatura? 🤔**\n\nPor defecto, los videos usan una miniatura generada por `ffmpeg` y los archivos no tienen una.\nSi tu quieres establecer tu propia miniatura, puedes hacerlo con los siguientes comandos 👇,\n\n\n    • **/set_thumb** - Establecer miniatura\n\n    • **/get_thumb** - Obtener miniatura actual\n\n    • **/del_thumb** - Para borrar la miniatura existente",
-    "help_lang": "**¿Cómo cambiar de idioma? 🤔**\n\nEl idioma por defecto es el Inglés. Sin embargo, puedes cambiarlo a tu idioma, si está disponible. Para cambiar el idioma actual, envía el comando **/set_lang**.\n\n¿Quieres ayudar con las traducciones? Por favor [lee esto](https://github.com/Itz-fork/Unzipper-Bot/tree/main/unzipper/localization#contribute-to-the-translation)",
+    "help_lang": "**¿Cómo cambiar de idioma? 🤔**\n\nEl idioma por defecto es el Inglés. Sin embargo, puedes cambiarlo a tu idioma, si está disponible. Para cambiar el idioma actual, envía el comando **/set_lang**.",
     
     "ok_backup": "**¡Copia de seguridad exitosa ✅!** \n\n**Enlace 🔗:** {}",
     "ok_download": "**¡Descarga exitosa ✅!**\n\n**📂 Nombre del archivo:** `{}`\n**⬇️ Descargado en:** `{}`",
